typo in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
         version: '>= 363.0.0'
 
     - name: 'Build and deploy'
-      run: 'gcloud builds submit --region="europe-west1" --config cloudbuild.yml .'
+      run: 'gcloud builds submit --region="europe-west1" --config cloudbuild.yaml .'
